Set a z-index to searchbar section to ensure that it displays over the map, see issue #17

--- a/css/demo.css
+++ b/css/demo.css
@@ -15,6 +15,7 @@ body {
   position:absolute;
   margin:20px;
   width:350px;
+  z-index: 50;
 }
 
 #searchbar input {
